# kingdomclicker-single

./: .gitmodules  .vimrc  CMakeLists.txt  dependencies  prepare.sh
assets/: terrain.pixil  unit.pixil
engine/: CMakeLists.txt
engine/engine/: assets.hpp  astar.cpp  astar.hpp  camera.hpp  camera_raylib.cpp  circle.hpp  color.hpp  ellipse.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  input_raylib.cpp  line.hpp  loop.cpp  navmesh.hpp  physics.cpp  physics.hpp  physics_raylib.cpp  polygon.hpp  random.cpp  random.hpp  rectangle.hpp  render.cpp  render.hpp  render_raylib.cpp  scene.cpp  scene.hpp  sprite.hpp  texture.hpp  triangle.hpp  vector2.cpp  vector2.hpp  vector2_overload.cpp
engine/engine/earcut/: navmesh_earcut.cpp  navmesh_earcut.hpp
engine/engine/raylib/: assets_raylib.cpp  camera_raylib.cpp  input_raylib.cpp  physics_raylib.cpp  render_raylib.cpp
src/: CMakeLists.txt  components.hpp  island.cpp  island.hpp  item.hpp  main.cpp  types.hpp
src/assamblages/: assamblages.cpp  assamblages.hpp
src/components/: components.hpp  core.hpp  game.hpp
src/scenes/: game.hpp  navtest.hpp  splash.hpp
src/systems/: animation.cpp  animation.hpp  camera_update.hpp  camera_update_system.cpp  collection_system.cpp  collision.hpp  collision_system.cpp  hover.hpp  hover_system.cpp  movement.hpp  movement_system.cpp  pathfinding.hpp  pathfinding_system.cpp  render.hpp  render_debug.hpp  render_debug_system.cpp  render_system.cpp  render_ui.hpp  render_ui_system.cpp  selection.hpp  selection_system.cpp  systems.hpp  waypoint_system.cpp
src/systems/tasks/: move.hpp  (+4 more)
